--- a/lib/hello_web/templates/layout/app.html.eex
+++ b/lib/hello_web/templates/layout/app.html.eex
@@ -9,12 +9,16 @@
 
     <title>Hello Hello!</title>
     <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flipclock/0.7.8/flipclock.min.css" />
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flipclock/0.7.8/flipclock.min.js"></script>
   </head>
 
   <body>
     <div class="container">
       <header class="header">
-        <span class="logo"></span>
+        <%# <span class="logo"></span> %>
+        <span class="auth0-logo"></span>
       </header>
 
       <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
