--- a/lib/hello_web/templates/page/index.html.eex
+++ b/lib/hello_web/templates/page/index.html.eex
@@ -1,8 +1,19 @@
-<div class="jumbotron">
-  <h2><%= gettext "Welcome to %{name}", name: "the front page of my first Elixir/Phoenix project" %></h2>
-  <p class="lead">I'm trying to create backend, but you know what? You're looking at the html right now</p>
-</div>
-
-<div class="row marketing">
-  There I will show users from the db
-</div>
+<%= for event <- @events do %>
+    <div class="jumbotron">
+      <span class="h1">Days until <%= event.title %></span>
+      <p class="text-center"><span class="countdownClock" data-due="<%= event.due %>"></span></p>
+    </div>
+<% end %>
+<script>
+$(document).ready(function() {
+    $('.countdownClock').each(function(i, el) {
+      var today = new Date();
+      var due = new Date($(el).data('due'));
+      $(el).FlipClock((due/1000) - (today/1000), {
+          clockFace: 'DailyCounter',
+            countdown: true,
+            showSeconds: false
+      });
+    });
+});
+</script>
